test/core/e2e/single-acct-flow.integ.snapshot/aws-cdk-vpclattice-e2e-single-acct-auth.template.json
{
 "Resources": {
  "ServiceVPC2EDFAACA": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-single-acct-auth/ServiceVPC"
     }
    ]
   }
  },
  "ServiceVPCPublicSubnet1SubnetEF6BAD22": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-single-acct-auth/ServiceVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ServiceVPC2EDFAACA"
    }
   }
  },
  "ServiceVPCPublicSubnet1RouteTable805A2C83": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-single-acct-auth/ServiceVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ServiceVPC2EDFAACA"
    }
   }
  },
  "ServiceVPCPublicSubnet1RouteTableAssociationA56541AB": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ServiceVPCPublicSubnet1RouteTable805A2C83"
    },
    "SubnetId": {
     "Ref": "ServiceVPCPublicSubnet1SubnetEF6BAD22"
    }
   }
  },
  "ServiceVPCPublicSubnet1DefaultRoute1478B70C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "ServiceVPCIGW3D60E7E3"
    },
    "RouteTableId": {
     "Ref": "ServiceVPCPublicSubnet1RouteTable805A2C83"
    }
   },
   "DependsOn": [
    "ServiceVPCVPCGWBA0446DD"
   ]
  },
  "ServiceVPCPublicSubnet1EIP3CB84611": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-single-acct-auth/ServiceVPC/PublicSubnet1"
     }
    ]
   }
  },
  "ServiceVPCPublicSubnet1NATGatewayCDCC51E1": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "ServiceVPCPublicSubnet1EIP3CB84611",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "ServiceVPCPublicSubnet1SubnetEF6BAD22"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-single-acct-auth/ServiceVPC/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "ServiceVPCPublicSubnet1DefaultRoute1478B70C",
    "ServiceVPCPublicSubnet1RouteTableAssociationA56541AB"
   ]
  },
  "ServiceVPCPublicSubnet2SubnetE833450A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-single-acct-auth/ServiceVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ServiceVPC2EDFAACA"
    }
   }
  },
  "ServiceVPCPublicSubnet2RouteTable47778387": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-single-acct-auth/ServiceVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ServiceVPC2EDFAACA"
    }
   }
  },
  "ServiceVPCPublicSubnet2RouteTableAssociation87A32462": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ServiceVPCPublicSubnet2RouteTable47778387"
    },
    "SubnetId": {
     "Ref": "ServiceVPCPublicSubnet2SubnetE833450A"
    }
   }
  },
  "ServiceVPCPublicSubnet2DefaultRoute44C700CC": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "ServiceVPCIGW3D60E7E3"
    },
    "RouteTableId": {
     "Ref": "ServiceVPCPublicSubnet2RouteTable47778387"
    }
   },
   "DependsOn": [
    "ServiceVPCVPCGWBA0446DD"
   ]
  },
  "ServiceVPCPrivateSubnet1SubnetD5E693D0": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-single-acct-auth/ServiceVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ServiceVPC2EDFAACA"
    }
   }
  },
  "ServiceVPCPrivateSubnet1RouteTable44B0E20B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-single-acct-auth/ServiceVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ServiceVPC2EDFAACA"
    }
   }
  },
  "ServiceVPCPrivateSubnet1RouteTableAssociation3560433A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ServiceVPCPrivateSubnet1RouteTable44B0E20B"
    },
    "SubnetId": {
     "Ref": "ServiceVPCPrivateSubnet1SubnetD5E693D0"
    }
   }
  },
  "ServiceVPCPrivateSubnet1DefaultRouteAC5C4D26": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "ServiceVPCPublicSubnet1NATGatewayCDCC51E1"
    },
    "RouteTableId": {
     "Ref": "ServiceVPCPrivateSubnet1RouteTable44B0E20B"
    }
   }
  },
  "ServiceVPCPrivateSubnet2Subnet1C3DB1A3": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-single-acct-auth/ServiceVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ServiceVPC2EDFAACA"
    }
   }
  },
  "ServiceVPCPrivateSubnet2RouteTable253A2D2F": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-single-acct-auth/ServiceVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ServiceVPC2EDFAACA"
    }
   }
  },
  "ServiceVPCPrivateSubnet2RouteTableAssociation32000FAC": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ServiceVPCPrivateSubnet2RouteTable253A2D2F"
    },
    "SubnetId": {
     "Ref": "ServiceVPCPrivateSubnet2Subnet1C3DB1A3"
    }
   }
  },
  "ServiceVPCPrivateSubnet2DefaultRoute89845233": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "ServiceVPCPublicSubnet1NATGatewayCDCC51E1"
    },
    "RouteTableId": {
     "Ref": "ServiceVPCPrivateSubnet2RouteTable253A2D2F"
    }
   }
  },
  "ServiceVPCIGW3D60E7E3": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-single-acct-auth/ServiceVPC"
     }
    ]
   }
  },
  "ServiceVPCVPCGWBA0446DD": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "ServiceVPCIGW3D60E7E3"
    },
    "VpcId": {
     "Ref": "ServiceVPC2EDFAACA"
    }
   }
  },
  "ClientVPC9BBAC0E1": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-single-acct-auth/ClientVPC"
     }
    ]
   }
  },
  "ClientVPCPublicSubnet1SubnetFD59F178": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-single-acct-auth/ClientVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ClientVPC9BBAC0E1"
    }
   }
  },
  "ClientVPCPublicSubnet1RouteTable783DDE25": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-single-acct-auth/ClientVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ClientVPC9BBAC0E1"
    }
   }
  },
  "ClientVPCPublicSubnet1RouteTableAssociation221067BC": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ClientVPCPublicSubnet1RouteTable783DDE25"
    },
    "SubnetId": {
     "Ref": "ClientVPCPublicSubnet1SubnetFD59F178"
    }
   }
  },
  "ClientVPCPublicSubnet1DefaultRoute09A9F007": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "ClientVPCIGWF105B9C1"
    },
    "RouteTableId": {
     "Ref": "ClientVPCPublicSubnet1RouteTable783DDE25"
    }
   },
   "DependsOn": [
    "ClientVPCVPCGW6B5994D8"
   ]
  },
  "ClientVPCPublicSubnet1EIP7BC29677": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-single-acct-auth/ClientVPC/PublicSubnet1"
     }
    ]
   }
  },
  "ClientVPCPublicSubnet1NATGatewayB83F6E86": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "ClientVPCPublicSubnet1EIP7BC29677",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "ClientVPCPublicSubnet1SubnetFD59F178"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-single-acct-auth/ClientVPC/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "ClientVPCPublicSubnet1DefaultRoute09A9F007",
    "ClientVPCPublicSubnet1RouteTableAssociation221067BC"
   ]
  },
  "ClientVPCPublicSubnet2SubnetF0A0A352": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-single-acct-auth/ClientVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ClientVPC9BBAC0E1"
    }
   }
  },
  "ClientVPCPublicSubnet2RouteTable2C374B0E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-single-acct-auth/ClientVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ClientVPC9BBAC0E1"
    }
   }
  },
  "ClientVPCPublicSubnet2RouteTableAssociation6DD83576": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ClientVPCPublicSubnet2RouteTable2C374B0E"
    },
    "SubnetId": {
     "Ref": "ClientVPCPublicSubnet2SubnetF0A0A352"
    }
   }
  },
  "ClientVPCPublicSubnet2DefaultRoute2D866838": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "ClientVPCIGWF105B9C1"
    },
    "RouteTableId": {
     "Ref": "ClientVPCPublicSubnet2RouteTable2C374B0E"
    }
   },
   "DependsOn": [
    "ClientVPCVPCGW6B5994D8"
   ]
  },
  "ClientVPCPrivateSubnet1SubnetE3E5FFFE": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-single-acct-auth/ClientVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ClientVPC9BBAC0E1"
    }
   }
  },
  "ClientVPCPrivateSubnet1RouteTableED250F92": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-single-acct-auth/ClientVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ClientVPC9BBAC0E1"
    }
   }
  },
  "ClientVPCPrivateSubnet1RouteTableAssociation18CF7EA9": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ClientVPCPrivateSubnet1RouteTableED250F92"
    },
    "SubnetId": {
     "Ref": "ClientVPCPrivateSubnet1SubnetE3E5FFFE"
    }
   }
  },
  "ClientVPCPrivateSubnet1DefaultRouteBD99772E": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "ClientVPCPublicSubnet1NATGatewayB83F6E86"
    },
    "RouteTableId": {
     "Ref": "ClientVPCPrivateSubnet1RouteTableED250F92"
    }
   }
  },
  "ClientVPCPrivateSubnet2Subnet9656AFCB": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-single-acct-auth/ClientVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ClientVPC9BBAC0E1"
    }
   }
  },
  "ClientVPCPrivateSubnet2RouteTable490353D0": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-single-acct-auth/ClientVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ClientVPC9BBAC0E1"
    }
   }
  },
  "ClientVPCPrivateSubnet2RouteTableAssociation1DA4EFC7": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ClientVPCPrivateSubnet2RouteTable490353D0"
    },
    "SubnetId": {
     "Ref": "ClientVPCPrivateSubnet2Subnet9656AFCB"
    }
   }
  },
  "ClientVPCPrivateSubnet2DefaultRouteC565362F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "ClientVPCPublicSubnet1NATGatewayB83F6E86"
    },
    "RouteTableId": {
     "Ref": "ClientVPCPrivateSubnet2RouteTable490353D0"
    }
   }
  },
  "ClientVPCIGWF105B9C1": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-single-acct-auth/ClientVPC"
     }
    ]
   }
  },
  "ClientVPCVPCGW6B5994D8": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "ClientVPCIGWF105B9C1"
    },
    "VpcId": {
     "Ref": "ClientVPC9BBAC0E1"
    }
   }
  },
  "ResSGE9E4FDE5": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "aws-cdk-vpclattice-e2e-single-acct-auth/ResSG",
    "GroupName": "client-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "10.0.0.0/16",
      "Description": "from 10.0.0.0/16:ALL TRAFFIC",
      "IpProtocol": "-1"
     },
     {
      "CidrIp": "169.254.0.0/16",
      "Description": "from 169.254.0.0/16:ALL TRAFFIC",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "ClientVPC9BBAC0E1"
    }
   }
  },
  "ServiceSG3DD30CA4": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "aws-cdk-vpclattice-e2e-single-acct-auth/ServiceSG",
    "GroupName": "service-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "10.0.0.0/16",
      "Description": "from 10.0.0.0/16:ALL TRAFFIC",
      "IpProtocol": "-1"
     },
     {
      "CidrIp": "169.254.0.0/16",
      "Description": "from 169.254.0.0/16:ALL TRAFFIC",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "ServiceVPC2EDFAACA"
    }
   }
  },
  "Parking6000F0C6": {
   "Type": "AWS::VpcLattice::Service",
   "Properties": {
    "AuthType": "AWS_IAM",
    "DnsEntry": {},
    "Name": "test-svc"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "ParkingListenerlistener1AACA213C": {
   "Type": "AWS::VpcLattice::Listener",
   "Properties": {
    "DefaultAction": {
     "Forward": {
      "TargetGroups": [
       {
        "TargetGroupIdentifier": {
         "Fn::GetAtt": [
          "LambdaTGF1D88294",
          "Id"
         ]
        },
        "Weight": 100
       }
      ]
     }
    },
    "Name": "listener1",
    "Port": 443,
    "Protocol": "HTTPS",
    "ServiceIdentifier": {
     "Fn::GetAtt": [
      "Parking6000F0C6",
      "Id"
     ]
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "ParkingServiceAuthPolicy69D9B431": {
   "Type": "AWS::VpcLattice::AuthPolicy",
   "Properties": {
    "Policy": {
     "Statement": [
      {
       "Action": "vpc-lattice-svcs:Invoke",
       "Condition": {
        "StringNotEqualsIgnoreCase": {
         "aws:PrincipalType": "anonymous"
        }
       },
       "Effect": "Allow",
       "Principal": "*",
       "Resource": "*"
      },
      {
       "Action": "vpc-lattice-svcs:*",
       "Condition": {
        "StringEquals": {
         "vpc-lattice-svcs:RequestMethod": "GET"
        }
       },
       "Effect": "Allow",
       "Principal": "*",
       "Resource": "*"
      }
     ],
     "Version": "2012-10-17"
    },
    "ResourceIdentifier": {
     "Fn::GetAtt": [
      "Parking6000F0C6",
      "Id"
     ]
    }
   }
  },
  "ServiceNetworkEF29AF70": {
   "Type": "AWS::VpcLattice::ServiceNetwork",
   "Properties": {
    "AuthType": "NONE",
    "Name": "superapps-auth-vcnetwork"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "ServiceNetworkAssociateVPCc82109ec4f50c659081928dce8e8815b12ebd3cfc6VpcAssociationc8201a61ce848455ba897a63301b1e56b016367e4eF9992C9C": {
   "Type": "AWS::VpcLattice::ServiceNetworkVpcAssociation",
   "Properties": {
    "SecurityGroupIds": [],
    "ServiceNetworkIdentifier": {
     "Fn::GetAtt": [
      "ServiceNetworkEF29AF70",
      "Id"
     ]
    },
    "VpcIdentifier": {
     "Ref": "ServiceVPC2EDFAACA"
    }
   }
  },
  "ServiceNetworkAssociateVPCc8c4413997c6ea78d48ac0d4f42733f9f7d757d6e3VpcAssociationc85cc3687d232b3ef31ed79ed747c9d1ffd5fc654e93CECCF9": {
   "Type": "AWS::VpcLattice::ServiceNetworkVpcAssociation",
   "Properties": {
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "ResSGE9E4FDE5",
       "GroupId"
      ]
     }
    ],
    "ServiceNetworkIdentifier": {
     "Fn::GetAtt": [
      "ServiceNetworkEF29AF70",
      "Id"
     ]
    },
    "VpcIdentifier": {
     "Ref": "ClientVPC9BBAC0E1"
    }
   }
  },
  "ServiceNetworkServiceAssociationc807e308ffd1ea5ea17d63c68c6f5b6b5ec44244afLatticeAssociationc858cdf9b944219e9d50b44eaf889c38555e954b0a199A15A9": {
   "Type": "AWS::VpcLattice::ServiceNetworkServiceAssociation",
   "Properties": {
    "ServiceIdentifier": {
     "Fn::GetAtt": [
      "Parking6000F0C6",
      "Id"
     ]
    },
    "ServiceNetworkIdentifier": {
     "Fn::GetAtt": [
      "ServiceNetworkEF29AF70",
      "Id"
     ]
    }
   }
  },
  "LatticeLambdaReservationServiceRole4BB66298": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"
       ]
      ]
     }
    ]
   },
   "DependsOn": [
    "ServiceVPCPrivateSubnet1DefaultRouteAC5C4D26",
    "ServiceVPCPrivateSubnet1RouteTableAssociation3560433A",
    "ServiceVPCPrivateSubnet2DefaultRoute89845233",
    "ServiceVPCPrivateSubnet2RouteTableAssociation32000FAC"
   ]
  },
  "LatticeLambdaReservationSecurityGroupDACFDAFC": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatic security group for Lambda Function awscdkvpclatticee2esingleacctauthLatticeLambdaReservationCD02EA64",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "ServiceVPC2EDFAACA"
    }
   },
   "DependsOn": [
    "ServiceVPCPrivateSubnet1DefaultRouteAC5C4D26",
    "ServiceVPCPrivateSubnet1RouteTableAssociation3560433A",
    "ServiceVPCPrivateSubnet2DefaultRoute89845233",
    "ServiceVPCPrivateSubnet2RouteTableAssociation32000FAC"
   ]
  },
  "LatticeLambdaReservation6C7DA18B": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": {
      "Fn::Sub": "cdk-hnb659fds-assets-${AWS::AccountId}-${AWS::Region}"
     },
     "S3Key": "258f26f41bc3c93bd430b1a065a6452c8ba422b6bd9618a2a9ad0947fe3e8756.zip"
    },
    "Handler": "index.lambda_handler",
    "Role": {
     "Fn::GetAtt": [
      "LatticeLambdaReservationServiceRole4BB66298",
      "Arn"
     ]
    },
    "Runtime": "python3.12",
    "Timeout": 240,
    "VpcConfig": {
     "SecurityGroupIds": [
      {
       "Fn::GetAtt": [
        "LatticeLambdaReservationSecurityGroupDACFDAFC",
        "GroupId"
       ]
      }
     ],
     "SubnetIds": [
      {
       "Ref": "ServiceVPCPrivateSubnet1SubnetD5E693D0"
      },
      {
       "Ref": "ServiceVPCPrivateSubnet2Subnet1C3DB1A3"
      }
     ]
    }
   },
   "DependsOn": [
    "LatticeLambdaReservationServiceRole4BB66298",
    "ServiceVPCPrivateSubnet1DefaultRouteAC5C4D26",
    "ServiceVPCPrivateSubnet1RouteTableAssociation3560433A",
    "ServiceVPCPrivateSubnet2DefaultRoute89845233",
    "ServiceVPCPrivateSubnet2RouteTableAssociation32000FAC"
   ]
  },
  "LambdaTGF1D88294": {
   "Type": "AWS::VpcLattice::TargetGroup",
   "Properties": {
    "Config": {
     "LambdaEventStructureVersion": "V1"
    },
    "Name": "service-tg",
    "Targets": [
     {
      "Id": {
       "Fn::GetAtt": [
        "LatticeLambdaReservation6C7DA18B",
        "Arn"
       ]
      }
     }
    ],
    "Type": "LAMBDA"
   }
  },
  "Ec2InstanceInstanceRole0047324B": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonSSMManagedInstanceCore"
       ]
      ]
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "client-instance"
     }
    ]
   }
  },
  "Ec2InstanceInstanceRoleDefaultPolicy053E367E": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": "vpc-lattice-svcs:Invoke",
       "Effect": "Allow",
       "Resource": "*"
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "Ec2InstanceInstanceRoleDefaultPolicy053E367E",
    "Roles": [
     {
      "Ref": "Ec2InstanceInstanceRole0047324B"
     }
    ]
   }
  },
  "Ec2InstanceInstanceProfileDA451126": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "Ec2InstanceInstanceRole0047324B"
     }
    ]
   }
  },
  "Ec2InstanceD6444E3D": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "IamInstanceProfile": {
     "Ref": "Ec2InstanceInstanceProfileDA451126"
    },
    "ImageId": {
     "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter"
    },
    "InstanceType": "t3.micro",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "ResSGE9E4FDE5",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "ClientVPCPrivateSubnet1SubnetE3E5FFFE"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "client-instance"
     }
    ],
    "UserData": {
     "Fn::Base64": "\n    #!/bin/bash\n    yum update -y\n    yum install -y jq\n  "
    }
   },
   "DependsOn": [
    "Ec2InstanceInstanceRoleDefaultPolicy053E367E",
    "Ec2InstanceInstanceRole0047324B"
   ]
  }
 },
 "Parameters": {
  "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter": {
   "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
   "Default": "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
  },
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Outputs": {
  "SvcDomainName": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "https://",
      {
       "Fn::GetAtt": [
        "Parking6000F0C6",
        "DnsEntry.DomainName"
       ]
      }
     ]
    ]
   }
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
